Travis-CI ImageMagick C make

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ go:
 install:
     - mkdir -p $HOME/gopath/src/github.com/mantyr/golang-magick/imagemagick
     - cd $HOME/gopath/src/github.com/mantyr/golang-magick/imagemagick
-    - wget http://distfiles.gentoo.org/distfiles/
+    - wget http://distfiles.gentoo.org/distfiles/ImageMagick-6.9.0-3.tar.xz
     - tar -xf ./ImageMagick-6.9.0-3.tar.xz
     - cd ./ImageMagick-6.9.0-3
     - ./configure
